manifest/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: aquametrics
  namespace: aquametrics
  labels:
    app: aquametrics
spec:
  selector:
    app: aquametrics
  ports:
    - name: http
      port: 80
      protocol: TCP
