manifest/base/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: aquametrics
  namespace: aquametrics
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "aquametrics.ch"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: aquametrics-tls
      hosts:
        - "aquametrics.ch"
