manifest/base/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aquametrics
  namespace: aquametrics
spec:
  hosts:
    - 'aquametrics.ch'
  gateways:
    - aquametrics
  http:
    - name: "aquametrics-routes"
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: aquametrics.aquametrics.svc.cluster.local
            port:
              number: 80
